# falsh

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
